tests/paczka1/fuzzy1/67873248.err
Error in line 3: A578 A578 16,9
Error in line 8: wVZNkDDZ62O S130 37,0
Error in line 10: wVZNkDDZ62O A578 8,1
Error in line 6: q7G9bF S127 71,3
Error in line 32: A578 A578 75,3
